2009-10-21  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* config.c:
	    Clean away some superflous debugs.

	* digipeater.c:
	    Viscous mode debug printout crashes on SEGV.. Oops.
	    (without debug the bug does not hit.)

	* README.ViscousDigipeater, digipeater.c:
	    Thinking about what are correct rules on Viscous Digipeat.

	* digipeater.c:
	    On configuration, make sure that no two <source> definitions
	    within single <digipeater> definition have same <interface>:s.

2009-10-20  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c:
	    Viscous digipeater special corner cases..

	* aprx.h, config.c, aprx.conf.in, aprx-complex.conf.in
	    Interval parser for "timeout" and "interval" parameters
	    used in several places.

	* config.c, aprx.conf.in, aprx-complex.conf.in:
	    Line continuation (the '\' character at the end of
	    input line - with possible whitespaces following it)
	    is now supported.
	    An interval parser is added; timeouts and intervals
	    can be defined in human readable way:  3m2s

	* aprx.8.in:
	    Larger rewrite to bring it up to current version.

	* aprsis.c, aprx.conf.in, aprx-complex.conf.in:
	    Reworked details of <aprsis> configuring, and internal
	    operational semantics.  Most notable difference is on
	    possibility to define used filters in small fragments,
	    which the system will then catenate.

	* aprx.h, digipeater.c, dupecheck.c:
	    Returned the viscous delay processing back to version
	    just before "simplified viscous delay and dupechecking".
	    It really needs to check delayed vs. immediate counts.

2009-10-19  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.92

	* digipeater.c, interface.c:
	    Clean variable naming on digipeater <source> subsystem.

	* aprx.h, aprx.conf.in, aprx-complex.conf.in, igate.c:
	    Update documentation

	* igate.c:
	    Reject packets with destcall=RXTLM-* from Tx-IGate.

	* digipeater.c: